# mag_de

./: .cpp  .gitignore  CMakeLists.txt  README.md
headers/: Arm.h  DifferentialEvolution.h  OptimizedDE.h  Robot3DOF.h  TrigonometryOperations.h  VectorOperations.h
sources/: Arm.cpp  DifferentialEvolution.cpp  OptimizedDE.cpp  Robot3DOF.cpp  TrigonometryOperations.cpp  VectorOperations.cpp  main.cpp
